fix : remove the overflow property

--- a/src/components/main_components/main.css
+++ b/src/components/main_components/main.css
@@ -1,21 +1,16 @@
-
 :root {
-    --sidebar: #2b2b2b;
-    --sidebar_color: #d3d3d3;
-    --main-color: #fff;
-    --recent: #008837;
-    --editor: #202124;
-    --tags-section: #d3d3d3;
-    --notes: #353535;
-  }
-  
+  --sidebar: #2b2b2b;
+  --sidebar_color: #d3d3d3;
+  --main-color: #fff;
+  --recent: #008837;
+  --editor: #202124;
+  --tags-section: #d3d3d3;
+  --notes: #353535;
+}
 
 .main__container {
-
-      display: flex;
-      flex-direction: row;
-
-
+  display: flex;
+  flex-direction: row;
 }
 
 .main__items {
@@ -23,10 +18,7 @@
   display: flex;
   flex-direction: row;
   background-color: var(--sidebar);
-  height : 100vh;
-
+  height: 100vh;
 }
 
-.main__routes {
-  
-}
+
